<resources>
    <string name="app_name">Project Mobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>

    <string name="dashboard_label">Dashboard</string>
    <string name="water_track_label">Water Track</string>
    <string name="task_track_label">Task Management</string>
    <string name="settings_label">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nama">Nama Lengkap</string>

    <string name="input_task_hint">Input Task</string>
    <string name="add">Add</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>