<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_nav_graph"
    app:startDestination="@id/DashboardFragment">

    <fragment
        android:id="@+id/DashboardFragment"
        android:name="com.example.projectmobile.DashboardFragment"
        android:label="@string/dashboard_label"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_DashboardFragment_to_TaskManagementFragment"
            app:destination="@id/TaskManagementFragment" />

        <action
            android:id="@+id/action_DashboardFragment_to_WaterTrackFragment"
            app:destination="@id/WaterTrackFragment" />

        <action
            android:id="@+id/action_DashboardFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/TaskManagementFragment"
        android:name="com.example.projectmobile.TaskManagementFragment"
        android:label="@string/task_track_label"
        tools:layout="@layout/fragment_task_management">
    </fragment>

    <fragment
        android:id="@+id/WaterTrackFragment"
        android:name="com.example.projectmobile.WaterTrackFragment"
        android:label="@string/water_track_label"
        tools:layout="@layout/fragment_water_track">
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.projectmobile.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings">
    </fragment>
</navigation>